<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".activities.SignUpWIthPhoneActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_view_app_icon"
            android:layout_width="82dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/app_start_margin"
            android:layout_marginTop="@dimen/app_top_margin"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/string_app_logo"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_view_app_theme"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginTop="@dimen/container_top_margin"
            android:background="@mipmap/girl_smile_pic"
            android:contentDescription="@string/string_theme_image_of_an_app"
            android:scaleType="centerCrop"
            android:src="@mipmap/girl_smile_pic"
            app:layout_constraintTop_toBottomOf="@+id/img_view_app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_start_margin"
            android:layout_marginTop="@dimen/container_top_margin"
            android:layout_marginEnd="@dimen/app_end_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_view_app_theme">

            <TextView
                style="@style/text_bold_montserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_welcome_back_to_online_store"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/user_phone_sign_in"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                android:autoLink="phone"
                android:autofillHints="Phone Number"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="20dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/text_phone_number"
                android:inputType="number"
                android:digits="1234567890-"
                android:maxLines="1"
                android:paddingBottom="25dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHighlight="@color/blue_button"
                android:textColorHint="@color/half_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:drawableTint="@color/black"
                android:ems="10"
                android:imeOptions="actionDone"
                android:fontFamily="@font/montserrat_light"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="25dp"
                android:textColor="@color/black"
                android:textColorHint="@color/half_black"
                android:textSize="16sp" />



            <ProgressBar
                android:id="@+id/sign_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/inter_container_top_margin"/>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                android:background="@drawable/button_background_fill"
                app:cardBackgroundColor="@color/blue_button"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                app:cardCornerRadius="@dimen/button_radius"
                app:cardElevation="0dp">




                <TextView

                    style="@style/text_bold_montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="11dp"
                    android:text="@string/string_sign_in"
                    android:textColor="@color/full_white"
                    android:textSize="14sp" />


            </com.google.android.material.card.MaterialCardView>








            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>