<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_view_app_icon"
            android:layout_width="82dp"
            android:layout_height="90dp"
            android:layout_marginStart="@dimen/app_start_margin"
            android:layout_marginTop="@dimen/app_top_margin"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/string_app_logo"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_view_app_theme"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_marginTop="@dimen/container_top_margin"
            android:background="@mipmap/girl_smile_pic"
            android:contentDescription="@string/string_theme_image_of_an_app"
            android:scaleType="centerCrop"
            android:src="@mipmap/girl_smile_pic"
            app:layout_constraintTop_toBottomOf="@+id/img_view_app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_start_margin"
            android:layout_marginTop="@dimen/container_top_margin"
            android:layout_marginEnd="@dimen/app_end_margin"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_view_app_theme">

            <TextView
                style="@style/text_bold_montserrat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_join_online_store_today"
                android:textSize="18sp" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_open_with_google"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                android:visibility="gone"
                android:background="@drawable/button_background_fill"
                app:cardCornerRadius="@dimen/button_radius"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="11dp">

                    <View
                        android:id="@+id/logo_google"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_google_logo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/text_bold_montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_open_with_google"
                        android:textColor="@color/blue_button"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/logo_google"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/view1"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@drawable/simple_line"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/text_id_or"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_id_or"
                        style="@style/text_light_montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"

                        android:text="@string/string_or"
                        android:textColor="@color/quarter_black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/view2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/view1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@drawable/simple_line"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/text_id_or"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_sign_up_with_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                android:background="@drawable/button_background_fill"
                app:cardBackgroundColor="@color/blue_button"
                app:cardCornerRadius="@dimen/button_radius"
                app:cardElevation="0dp">


                <TextView
                    style="@style/text_bold_montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="11dp"
                    android:text="@string/string_sign_up_with_your_phone"
                    android:textColor="@color/full_white"
                    android:textSize="14sp" />


            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/text_view_terms_of_conditions"
                style="@style/text_light_montserrat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inter_container_top_margin"
                android:linksClickable="true"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/half_black"
                android:textSize="11sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/container_top_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/text_bold_montserrat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/inter_container_top_margin"
                    android:paddingTop="@dimen/container_top_margin"
                    android:text="@string/string_already_have_an_account"
                    android:textSize="14sp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/inter_container_top_margin">


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button_height"
                        android:background="@drawable/button_background_stroke"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/text_bold_montserrat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_sign_in"
                        android:textColor="@color/blue_button"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>